<resources>
    <array name="gender">
        <item>Mit Pimmel</item>
        <item>Mit ohne Pimmel</item>
    </array>
    <string name="app_name"><b>BEERPONG</b><i>league</i></string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="beerpong">Bierpong</string>
    <string name="league">league</string>
    <string name="played_games">Gespielte Spiele</string>
    <string name="title_activity_login">Anmelden</string>
    <!-- Strings related to login -->
    <string name="title_activity_add_game">Neues Spiel</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Passwort</string>
    <string name="action_sign_in">Anmelden</string>
    <string name="action_register">Registrieren</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="comming_soon">Gedult haben du musst</string>
    <string name="no_internet_connection">Das Internet ist zwar Neuland, trotzdem musst du dich verbinden!</string>
    <string name="hint_first_name">Vorname</string>
    <string name="hint_last_name">Nachname</string>
    <string name="hint_mail">E-Mail Adresse</string>
    <string name="hint_username">Username</string>
    <string name="hint_nick_name">Spitzname (optional)</string>
    <string name="hint_password">Passwort</string>
    <string name="to_short">Zu kurz</string>
    <string name="player">Spieler</string>
    <string name="score">Score</string>
    <string name="add_game">Spiel hinzufügen</string>
    <string name="score_description">Die Anzahl an Bechern, welche noch vor dem jeweiligen Team stehen</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Abbrechen</string>
    <string name="button_yes">Ja</string>
    <string name="button_no">Nein</string>
    <string name="game_added">Spiel eingetragen</string>
    <string name="overview">Übersicht</string>
    <string name="score_spacer"> </string>
    <string name="to_confirm">Bestätigungen</string>
    <string name="elo_trend">Elo Verlauf</string>
    <string name="hello_user">Hallo %1$s</string>
    <string name="your_elo">Elo: %1$d</string>
    <string name="zero">0</string>
    <string name="confirm_right">Stimmt</string>
    <string name="confirm_wrong">Lüge</string>
    <string name="game_confirmed">Spiel bestätigt</string>
    <string name="user_used">Du kannst jede Person nur einmal pro Spiel verwenden!</string>
    <string name="username_taken">Benutzername bereits benutzt</string>
    <string name="won_games">Gewonnene Spiele</string>
    <string name="lost_games">Verlorene Spiele</string>
    <string name="statistics">Statistiken</string>
    <string name="games_all_time">Spiele jemals</string>
    <string name="win_lose_ratio">Sieg/Niederlage Verhältnis</string>
    <string name="win_ratio">Sieg Quote</string>
    <string name="your_elo_clean">Deine Elo</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="max_elo_all_time">Höchster Elo Wert</string>
    <string name="min_elo_all_time">Niedrigster Elo Wert</string>
    <string name="beers_drunk_all_time" translatable="false">Du hast bereits %1$d Liter Bier getrunken.</string>
    <string name="more">Mehr</string>
    <string name="share">Teilen</string>
    <string name="logout">Logout</string>
    <string name="text_share">*Beerpong League* <br /> Messe dich mit anderen Beerpong Spielern in einem Rang System<br /> https://play.google.com/store/apps/details?id=jan.schuettken.bierpongleague</string>
    <string name="no_games_played_jet">Du hast bis jetzt noch keine Spiele Gespielt. Drücke auf das <b>+</b> um ein neues Spiel einzutragen</string>
    <string name="no_ares_joined">Du hast bis jetzt noch keine Spiele Gespielt. Drücke auf das <b>+</b> um ein neues Spiel einzutragen</string>
    <string name="no_scores_join_area">Tritt einer Liga bei um ein Scoreboard zu erhalten</string>
    <string name="app_version">Version</string>
    <string name="show_version">Version: %1$s (Build %2$d)</string>
    <string name="bad_user">Diesen Spieler darfst du nicht verwenden!</string>
    <string name="select_area">In welcher Liga spielst du gerade?</string>
    <string name="name_of_area">Name der Liga</string>
    <string name="add_area">Liga hinzufügen</string>
    <string name="area">Liga</string>
    <string name="area_added">Liga hinzugefügt</string>
    <string name="private_area">Private Liga</string>
    <string name="private_area_info">In dieser Liga können nur Leute spielen, welche zuvor bestätigt wurden.</string>
    <string name="public_area">Öffentliche Liga</string>
    <string name="public_area_info">In dieser Liga kann jeder spielen. Sie ist auch für jeden sichtbar</string>
    <string name="info">Info</string>
    <string name="my_areas">Meine Ligen</string>
    <string name="error">Fehler</string>
    <string name="user_not_in_area">Es müssen alle Mitspieler auch in der gewünschten Liga sein</string>
    <string name="save_changes">Änderungen speichern</string>
    <string name="name_of_user">Names des neuen Spielers</string>
    <string name="add_player">Spieler hinzufügen</string>
    <string name="player_added">Spieler hinzugefügt</string>
    <string name="must_be_admin">Du musst Admin sein</string>
    <string name="user_already_in_area">Dieser Spieler ist bereits der Liga beigetreten</string>
    <string name="enter_area_code">Gib den Liga Code ein um einer bestehenden Liga bezutreten. Den Code erhalst du von dem Ersteller der Liga</string>
    <string name="join_area">Liga beitreten</string>
    <string name="no_code_entered">Kein Code eingegeben</string>
    <string name="area_code">Liga Freigabecode</string>
    <string name="area_code_hint">Dieser Code kann verteilt werden. Um dieser Area beizutreten.</string>
    <string name="saved_to_clipboard">Text kopiert</string>
    <string name="forgot_password">Passwort vergessen?</string>
    <string name="insert_mail">Bitte trage deine Email Adresse ein. (Sie muss uns bereits bekannt sein)</string>
    <string name="you_received_an_mail">Du hast eine E-Mail bekommen. Bitte schau auch in den Spam Ordner.</string>
    <string name="email_not_taken">Diese E-Mail ist uns nicht bekannt. Bitte versuche ein andere</string>
    <string name="server_not_available">Server nicht erreichtbar</string>
    <string name="prompt_email">E-Mail</string>
    <string name="reset_password">Passwort zurücksetzen</string>
    <string name="change_mail">E-Mail ändern</string>
    <string name="change_mail_info">Möchtest du deine Mail Adresse ändern? Du benötigst sie falls du dein Passwort vergisst oder wir Kontakt mir dir aufnehmen müssen</string>
    <string name="changes_successful">Änderung erfolgreich</string>
    <string name="change_username">Benutzernamen ändern</string>
    <string name="change_password">Passwort ändern</string>
    <string name="profile_settings">Profileinstellungen</string>
    <string name="button_change">Ändern</string>
    <string name="success">Erfolgreich</string>
    <string name="entry_changed">Eintrag geändert</string>
    <string name="an_error_has_occurred">Ein Fehler ist augetreten</string>
    <string name="change_username_info">Möchtest du deinen Benutzernamen ändern? Du musst dich dann mit dem neuen Namen anmelden!</string>
    <string name="not_identical_passwords">Die Passwörter stimmen nicht überein!</string>
    <string name="enter_new_password">Neues Passwort eingeben</string>
    <string name="confirm_password">Passwort bestätigen</string>
    <string name="save">Speichern</string>
    <string name="enter_old_password">Altes Passwort eingeben</string>
    <string name="search">Suchen</string>
    <string name="mail_taken">Diese Mail ist beireits benutzt</string>
    <string name="wrong_old_password">Altes Passwort falsch</string>
    <string name="code_from_clipboard">Code aus Zwischenablage gelesen</string>
    <string name="delete_game">Spiel löschen</string>
    <string name="you_are_not_admin">Du bist nicht der Admin des Spiels</string>
    <string name="game_deleted">Spiel gelöscht</string>
    <string name="arrange">Zusammenstellen</string>
    <string name="to_clippord">In Zwischenablage</string>
    <string name="added_to_clippboard">Link in Zischenabelage übernommen</string>
    <string name="open">Öffnen</string>
    <string name="moved_info">Die BeerPongLeage ist umgezogen, du findest sie nun als WebApp. Möchtest du den Link jetzt öffnen?</string>
</resources>
