<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/overview" />
        <item
            android:id="@+id/nav_played_games"
            android:icon="@drawable/ic_format_list_bulleted_black_24dp"
            android:title="@string/played_games" />
        <item
            android:id="@+id/nav_to_confirm"
            android:icon="@drawable/ic_playlist_add_check_black_24dp"
            android:title="@string/to_confirm" />
        <item
            android:id="@+id/nav_scoreboard"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/scoreboard" />
        <item
            android:id="@+id/nav_elo_trend"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/elo_trend" />
    </group>


    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
