<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.OverviewActivity">
    <!--tools:showIn="@layout/activity_overview">-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <RelativeLayout
            android:id="@+id/region_simple_text_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:visibility="gone">


            <LinearLayout
                android:id="@+id/region_won_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/won_games" />

                <TextView
                    android:id="@+id/num_won_games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/region_played_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/played_games" />

                <TextView
                    android:id="@+id/num_played_games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/region_lost_games"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lost_games" />

                <TextView
                    android:id="@+id/num_lost_games"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/overview_activity_background"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="2dp"
                android:text="@string/hint_first_name"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13pt" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:padding="0dp"
                android:text="@string/your_elo_clean"
                android:textAlignment="center"
                android:textSize="8pt" />

            <TextView
                android:id="@+id/your_elo_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="2dp"
                android:text="@string/your_elo"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="17pt" />

            <TextView
                android:id="@+id/beers_drunk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0dp"
                android:padding="0dp"
                android:text="@string/beers_drunk_all_time"
                android:textAlignment="center"
                android:textSize="8pt" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/region_win_lose_stats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/overview_activity_background"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:padding="2dp"
                android:text="@string/win_lose_ratio"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13pt" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart_category_out"
                android:layout_width="match_parent"
                android:layout_height="400dp" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>