<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin_bottom"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:layout_marginStart="5dp"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/ic_logo_v3_2_text" />

    <TextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-4dp"
        android:text="@string/nav_header_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text_elo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nav_header_subtitle"
            android:layout_centerVertical="true"/>

        <TextView
            android:id="@+id/eloPreviewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/text_elo" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/elo_preview_line_chart"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="-3dp"
            android:layout_marginTop="-10dp"
            android:layout_toEndOf="@+id/eloPreviewText" />


    </RelativeLayout>

</LinearLayout>
